# -QMT-python-TCP-

./: .env.example  .gitignore  README.md  coordinator_config.example.json  generate_helper.ps1  setup_venv.ps1  start_external_windows.ps1  start_gateway.ps1  validate_project.ps1  最简易部署文档.md  项目简介_数据链与标准TCP网关.md
tests/: test_benchmark_local_bridge.py  test_bounded_io.py  test_env_loader.ps1  test_gateway_local_contract.py  test_order_correlation.py  test_project_env.py  test_venv_contract.py  test_windows_directory_watcher.py
tools/: Load-ProjectEnv.ps1  Resolve-ProjectPython.ps1  __init__.py  benchmark_local_bridge.py  preflight.py  project_env.py
外置策略API/: README.md  pyproject.toml
外置策略API/qmt_local_api/: __init__.py  api.py  client.py  config.py  coordinator.py  coordinator_host.py  coordinator_server.py  dispatcher.py  protocol.py  query_broker.py  runtime.py  transport.py
外置策略API/tests/: __init__.py  fake_gateway.py  test_client_contract.py  test_coordinator.py  test_coordinator_host.py  test_examples.py  test_protocol.py  test_runtime_api.py
大QMT内置python/: README.md  SOURCE_BASELINE.json  run_tests.ps1
大QMT内置python/src/: bigqmt_file_queue_helper.py  bigqmt_loader.py
大QMT内置python/tests/: test_generator.py  test_helper_runtime.py
大QMT内置python/tools/: generate_helpers.py
文档/: TCP协议与外置API.md  项目整体参考.md
示例/: async_cancel.py  async_order.py  callback_client.py  common.py  protocol_demo.py  query_account.py  raw_tcp_query.py
网关/: README.md  bigqmt_gateway_proxy.py  bounded_io.py  order_correlation.py  windows_directory_watcher.py
(+2 files in other folders)
