[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qmt-local-strategy-api"
version = "1.0.0"
description = "Full-performance local TCP API for external Big QMT strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["qmt_local_api*"]
